name:                   HCPParse
version:                0.1.0.0
license:                MIT
license-file:           LICENSE
author:                 Maciej Oziebly - Spawek <spawnerer@gmail.com>
maintainer:             Maciej Oziebly - Spawek <spawnerer@gmail.com>
build-type:             Simple
cabal-version:          >=1.10

executable HCPParse
    hs-source-dirs:     src
    main-is:            Parser.hs
    default-language:   Haskell2010
    build-depends:      base >=4.6 && <4.7,
                        parsec >=3.1 && <3.2,
                        mtl >=2.1 && <2.2,
                        containers >=0.5 && <0.6,
                        random >=1.0 && <1.1    

Library 
    hs-source-dirs:     src
    default-language:   Haskell2010
    -- exposed-Modules:    HCPParse.Parser
    -- GHC-Options:       -Wall
    build-depends:      base >=4.6 && <4.7,
                        parsec >=3.1 && <3.2,
                        mtl >=2.1 && <2.2,
                        containers >=0.5 && <0.6,
                        random >=1.0 && <1.1

Test-Suite test-parse
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    main-is:            Tests.hs
    hs-source-dirs:     test
    -- GHC-Options:        -Wall
    build-depends:      base,
                        hspec >= 1.3,
                        QuickCheck,
                        HCPParse

Source-Repository head
    type:               git
    location:           https://github.com/Spawek/HCPParse