name:                   HCPParse
version:                0.1.0.0
license:                MIT
license-file:           LICENSE
author:                 Maciej Oziebly - Spawek <spawnerer@gmail.com>
maintainer:             Maciej Oziebly - Spawek <spawnerer@gmail.com>
build-type:             Simple
cabal-version:          >=1.10

executable HCPParse
    hs-source-dirs:     src
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      base >=4.6 && <4.7,
                        parsec >=3.1 && <3.2,
                        mtl >=2.1 && <2.2,
                        containers >=0.5 && <0.6,
                        random >=1.0 && <1.1,
                        transformers >= 0.3.0.0

Library 
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-Modules:    Main,
                        Tokenizer,
                        PPTokenParser
    -- GHC-Options:       -Wall
    build-depends:      base >=4.6 && <4.7,
                        parsec >=3.1 && <3.2,
                        mtl >=2.1 && <2.2,
                        containers >=0.5 && <0.6,
                        random >=1.0 && <1.1,
                        transformers >= 0.3.0.0

Test-Suite test-parse
    type:               exitcode-stdio-1.0
    default-language:   Haskell2010
    main-is:            Spec.hs
    hs-source-dirs:     test
    other-modules:      TokenizerSpec,
                        PPTokenParserSpec
                        PreprocSpec
    -- GHC-Options:        -Wall
    build-depends:      base,
                        parsec >=3.1 && <3.2,
                        hspec >= 1.3,
                        transformers >= 0.3.0.0,
                        QuickCheck,
                        HCPParse

Source-Repository head
    type:               git
    location:           https://github.com/Spawek/HCPParse
